# benchmark_python_serializer

./: Pipfile  README.md  pyproject.toml  test.py
