[tool.poetry]
name = "benchmark_python_serializer"
version = "0.1.0"
description = ""
authors = ["Ryuuji Yoshimoto <ryuuji@calil.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
invenio = "*"
pytest = "*"
zstandard = "*"
ujson = "*"
pytest-benchmark = "*"
msgpack = "*"
orjson = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
