[tool.poetry]
name = "benchmark_python_serializer"
version = "0.1.0"
description = ""
authors = ["Ryuuji Yoshimoto <ryuuji@calil.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "*"
zstandard = "*"
ujson = "*"
pytest-benchmark = "*"
msgpack = "*"
orjson = "*"
lxml = "^4.6.3"
isbnlib = "^3.10.7"
beautifulsoup4 = "^4.9.3"
xmlsq = "^0.9.0-alpha.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
